Implemented implementations of commands. Started covering with unit tests.